@@ -36,6 +36,23 @@ $attainmentAlternativeNameAbrev = getSettingByScope($connection2, 'Markbook', 'a
 $effortAlternativeName = getSettingByScope($connection2, 'Markbook', 'effortAlternativeName');
 $effortAlternativeNameAbrev = getSettingByScope($connection2, 'Markbook', 'effortAlternativeNameAbrev');
 
+//Get variables from Planner
+$gibbonUnitID = null;
+if (isset($_GET['gibbonUnitID']))
+    $gibbonUnitID = $_GET['gibbonUnitID'];
+
+$gibbonPlannerEntryID = null;
+if (isset($_GET['gibbonPlannerEntryID']))
+    $gibbonPlannerEntryID = $_GET['gibbonPlannerEntryID'];
+
+$name = null;
+if (isset($_GET['name']))
+    $name = $_GET['name'];
+
+$summary = null;
+if (isset($_GET['summary']))
+    $summary = $_GET['summary'];
+
 if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_add.php') == false) {
     //Acess denied
     echo "<div class='error'>";
@@ -131,7 +148,10 @@ if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_add
 										if ($currentType != $lastType) {
 											echo "<optgroup label='--".$currentType."--'>";
 										}
-										echo "<option class='".$rowSelect['gibbonCourseClassID']."' value='".$rowSelect['gibbonUnitID']."'>".htmlPrep($rowSelect['name']).'</option>';
+                                        $selected = '';
+                                        if ($rowSelect['gibbonUnitID'] == $gibbonUnitID)
+                                            $selected = 'selected';
+                                        echo "<option $selected class='".$rowSelect['gibbonCourseClassID']."' value='".$rowSelect['gibbonUnitID']."'>".htmlPrep($rowSelect['name']).'</option>';
 										$lastType = $currentType;
 									}
 
@@ -160,7 +180,10 @@ if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_add
 												if ($currentType != $lastType) {
 													echo "<optgroup label='--".$currentType."--'>";
 												}
-												echo "<option class='".$rowHookUnits[$hookOptions['classLinkIDField']]."' value='".$rowHookUnits[$hookOptions['unitIDField']].'-'.$rowHooks['gibbonHookID']."'>".htmlPrep($rowHookUnits[$hookOptions['unitNameField']]).'</option>';
+                                                $selected = '';
+                                                if ($rowSelect['gibbonUnitID'] == $gibbonUnitID)
+                                                    $selected = 'selected';
+                                                echo "<option class='".$rowHookUnits[$hookOptions['classLinkIDField']]."' value='".$rowHookUnits[$hookOptions['unitIDField']].'-'.$rowHooks['gibbonHookID']."'>".htmlPrep($rowHookUnits[$hookOptions['unitNameField']]).'</option>';
 												$lastType = $currentType;
 											}
 										}
@@ -174,7 +197,7 @@ if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_add
 								<b><?php echo __($guid, 'Lesson') ?></b><br/>
 							</td>
 							<td class="right">
-								<select name="gibbonPlannerEntryID" id="gibbonPlannerEntryID" class="standardWidth">
+                                <select name="gibbonPlannerEntryID" id="gibbonPlannerEntryID" class="standardWidth">
 									<?php
                                     try {
                                         $dataSelect = array();
@@ -185,10 +208,13 @@ if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_add
                                     }
 									echo "<option value=''></option>";
 									while ($rowSelect = $resultSelect->fetch()) {
-										if ($rowSelect['gibbonHookID'] == '') {
-											echo "<option class='".$rowSelect['gibbonUnitID']."' value='".$rowSelect['gibbonPlannerEntryID']."'>".htmlPrep($rowSelect['name']).'</option>';
+                                        $selected = '';
+                                        if ($rowSelect['gibbonPlannerEntryID'] == $gibbonPlannerEntryID)
+                                            $selected = 'selected';
+                                        if ($rowSelect['gibbonHookID'] == '') {
+											echo "<option $selected class='".$rowSelect['gibbonUnitID']."' value='".$rowSelect['gibbonPlannerEntryID']."'>".htmlPrep($rowSelect['name']).'</option>';
 										} else {
-											echo "<option class='".$rowSelect['gibbonUnitID'].'-'.$rowSelect['gibbonHookID']."' value='".$rowSelect['gibbonPlannerEntryID']."'>".htmlPrep($rowSelect['name']).'</option>';
+											echo "<option $selected class='".$rowSelect['gibbonUnitID'].'-'.$rowSelect['gibbonHookID']."' value='".$rowSelect['gibbonPlannerEntryID']."'>".htmlPrep($rowSelect['name']).'</option>';
 										}
 									}
 									?>
@@ -203,7 +229,7 @@ if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_add
 								<b><?php echo __($guid, 'Name') ?> *</b><br/>
 							</td>
 							<td class="right">
-								<input name="name" id="name" maxlength=20 value="" type="text" class="standardWidth">
+								<input name="name" id="name" maxlength=20 value="<?php echo $name?>" type="text" class="standardWidth">
 								<script type="text/javascript">
 									var name2=new LiveValidation('name');
 									name2.add(Validate.Presence);
@@ -215,7 +241,7 @@ if (isActionAccessible($guid, $connection2, '/modules/Markbook/markbook_edit_add
 								<b><?php echo __($guid, 'Description') ?> *</b><br/>
 							</td>
 							<td class="right">
-								<input name="description" id="description" maxlength=1000 value="" type="text" class="standardWidth">
+								<input name="description" id="description" maxlength=1000 value="<?php echo $summary?>" type="text" class="standardWidth">
 								<script type="text/javascript">
 									var description=new LiveValidation('description');
 									description.add(Validate.Presence);
