@@ -55,6 +55,7 @@ v13.0.00
 		Markbook: added settings to enable/disable Effort and Rubrics
 		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups
 		Markbook: removed Learning Area rubrics from multiple column add
+		Markbook: fixed return and presetting of fields when landing on add page from Planner
 		Messenger: fixed formatting of Sent From Gibbon tag
 		Messenger: fixed display of email/SMS report for recipients with , in their name
 		Messenger: disabled Canned Response for any non-staff users
@@ -63,6 +64,7 @@ v13.0.00
 		Planner: added ability to tag units, in order to help build curriculum maps
 		Planner: fixed lesson plan duplicate return bug, when not in current year
 		Planner: improved readability of Unit Overview in lesson plan view, by removing chat section where no messages exist
+		Planner: added field to mark whether unit should be included in curriculum maps and other summaries
 		Resources: improved usability of tag entry interface
 		School Admin: fixed timezone issue in managing special days
 		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
